# gnuradio

./: .gitignore  CMakeLists.txt  README.md  meson.build  meson_options.txt  rebuild.sh
bench/sched/: bm_a.cpp  bm_b.cpp  meson.build
blocklib/basic/: meson.build
blocklib/basic/lib/: meson.build
blocklib/basic/multiply_const/: meson.build  multiply_const.cpp  multiply_const.hpp  multiply_const_pybind.cpp
blocklib/basic/test/: meson.build  test_basic.cpp
blocklib/basic/vector_sink/: meson.build  vector_sink.cpp  vector_sink.hpp
blocklib/basic/vector_source/: meson.build  vector_source.cpp  vector_source.hpp
blocklib/bench/lib/: meson.build
gnuradio-runtime/python/gnuradio/gr/: CMakeLists.txt  __init__.py  gateway.py  hier_block2.py  python_bindings.cpp  qa_flowgraph.py  tag_utils.py  top_block.py
gnuradio-runtime/python/pmt/: CMakeLists.txt  __init__.py  pmt_to_python.py  python_bindings.cpp  tmp.cpp
gnuradio-runtime/python/pmt/bindings/: CMakeLists.txt  pmt_pool_pydoc_template.h  pmt_pool_python.cc  pmt_pydoc_template.h  pmt_python.cc  pmt_python.hpp  pmt_sugar_python.cc  python_bindings.cc
gnuradio-runtime/python/pmt/exports/: pmt_python.hpp
gr-analog/python/analog/: CMakeLists.txt  __init__.py  fm_demod.py  nbfm_rx.py  nbfm_tx.py  qa_sig_source.py  wfm_rcv.py  wfm_rcv_fmdet.py  wfm_rcv_pll.py  wfm_tx.py
gr-analog/python/analog/bindings/: CMakeLists.txt  agc2_cc_python.cc  agc2_ff_python.cc  agc3_cc_python.cc  agc_cc_python.cc  agc_ff_python.cc  agc_python.cc  cpfsk_bc_python.cc  cpm_python.cc  ctcss_squelch_ff_python.cc  dpll_bb_python.cc  fastnoise_source_python.cc  feedforward_agc_cc_python.cc  fmdet_cf_python.cc  frequency_modulator_fc_python.cc  noise_source_python.cc  noise_type_python.cc  phase_modulator_fc_python.cc  pll_carriertracking_cc_python.cc  pll_freqdet_cf_python.cc  pll_refout_cc_python.cc  probe_avg_mag_sqrd_c_python.cc  probe_avg_mag_sqrd_cf_python.cc  probe_avg_mag_sqrd_f_python.cc  pwr_squelch_cc_python.cc  pwr_squelch_ff_python.cc  python_bindings.cc  python_bindings.cpp  quadrature_demod_cf_python.cc  rail_ff_python.cc  random_uniform_source_python.cc  sig_source_python.cc  sig_source_waveform_python.cc  simple_squelch_cc_python.cc  squelch_base_cc_python.cc  squelch_base_ff_python.cc
gr-audio/python/audio/bindings/: CMakeLists.txt  python_bindings.cc  sink_python.cc  source_python.cc
gr-channels/python/channels/bindings/: CMakeLists.txt  cfo_model.json  cfo_model_python.cc  channel_model.json  channel_model2.json  channel_model2_python.cc  channel_model_python.cc  dynamic_channel_model.json  dynamic_channel_model_python.cc  fading_model.json  fading_model_python.cc  python_bindings.cc  selective_fading_model.json  selective_fading_model2.json  selective_fading_model2_python.cc  selective_fading_model_python.cc  sro_model.json  sro_model_python.cc
gr-fec/python/fec/bindings/: CMakeLists.txt  async_decoder_python.cc  async_encoder_python.cc  ber_bf_python.cc  cc_common_python.cc  cc_decoder_python.cc  cc_encoder_python.cc  ccsds_encoder_python.cc  conv_bit_corr_bb_python.cc  decode_ccsds_27_fb_python.cc  decoder_python.cc  depuncture_bb_python.cc  dummy_decoder_python.cc  dummy_encoder_python.cc  encode_ccsds_27_bb_python.cc  encoder_python.cc  fec_mtrx_python.cc  generic_decoder_python.cc  generic_encoder_python.cc  ldpc_G_matrix_python.cc  ldpc_H_matrix_python.cc  ldpc_bit_flip_decoder_python.cc  ldpc_decoder_python.cc  ldpc_encoder_python.cc  ldpc_gen_mtrx_encoder_python.cc  ldpc_par_mtrx_encoder_python.cc  polar_common_python.cc  polar_decoder_common_python.cc  polar_decoder_sc_list_python.cc  polar_decoder_sc_python.cc  polar_decoder_sc_systematic_python.cc  polar_encoder_python.cc  polar_encoder_systematic_python.cc  puncture_bb_python.cc  puncture_ff_python.cc  python_bindings.cc  repetition_decoder_python.cc  repetition_encoder_python.cc  tagged_decoder_python.cc  tagged_encoder_python.cc  (+4 more)
gr-fft/python/fft/bindings/: CMakeLists.txt  ctrlport_probe_psd_python.cc  fft_python.cc  fft_shift_python.cc  fft_vcc_python.cc  fft_vfc_python.cc  goertzel_fc_python.cc  goertzel_python.cc  python_bindings.cc  python_bindings.cpp  window_python.cc
gr-filter/python/filter/bindings/: CMakeLists.txt  dc_blocker_cc_python.cc  dc_blocker_ff_python.cc  fft_filter_ccc_python.cc  fft_filter_ccf_python.cc  fft_filter_fff_python.cc  fft_filter_python.cc  filter_delay_fc_python.cc  filterbank_python.cc  filterbank_vcvcf_python.cc  fir_filter_blk_python.cc  fir_filter_python.cc  fir_filter_with_buffer_python.cc  firdes_python.cc  freq_xlating_fir_filter_python.cc  hilbert_fc_python.cc  iir_filter_ccc_python.cc  iir_filter_ccd_python.cc  iir_filter_ccf_python.cc  iir_filter_ccz_python.cc  iir_filter_ffd_python.cc  iir_filter_python.cc  interp_fir_filter_python.cc  ival_decimator_python.cc  mmse_fir_interpolator_cc_python.cc  mmse_fir_interpolator_ff_python.cc  mmse_interp_differentiator_cc_python.cc  mmse_interp_differentiator_ff_python.cc  mmse_interpolator_cc_python.cc  mmse_interpolator_ff_python.cc  mmse_resampler_cc_python.cc  mmse_resampler_ff_python.cc  pfb_arb_resampler_ccc_python.cc  pfb_arb_resampler_ccf_python.cc  pfb_arb_resampler_fff_python.cc  pfb_arb_resampler_python.cc  pfb_channelizer_ccf_python.cc  pfb_decimator_ccf_python.cc  pfb_interpolator_ccf_python.cc  pfb_synthesizer_ccf_python.cc  (+8 more)
gr-trellis/python/trellis/bindings/: CMakeLists.txt  base_python.cc  calc_metric_python.cc  constellation_metrics_cf_python.cc  core_algorithms_python.cc  encoder_python.cc  fsm_python.cc  interleaver_python.cc  metrics_python.cc  pccc_decoder_blk_python.cc  pccc_decoder_combined_blk_python.cc  pccc_encoder_python.cc  permutation_python.cc  python_bindings.cc  quicksort_index_python.cc  sccc_decoder_blk_python.cc  sccc_decoder_combined_blk_python.cc  sccc_encoder_python.cc  siso_combined_f_python.cc  siso_f_python.cc  siso_type_python.cc  viterbi_combined_python.cc  (+1 more)
gr/include/gnuradio4/: dataset.hpp  graph.hpp  meson.build  node.hpp  node_traits.hpp  port_traits.hpp  tag.hpp  utils.hpp
gr/include/vir/: detail.h  meson.build
(+1520 files in other folders)
