
vir_dep = declare_dependency(include_directories: ['..'], dependencies : [fmt_dep])


header_files = [
    'detail.h',
    'simd_bit.h',
    'simd_bitset.h',
    'simd_cast.h',
    'simd_float_ops.h',
    'simd_resize.h',
    'simd.h',

]
install_headers(header_files, subdir : 'vir', preserve_path: true)